# vpuppr-4

./: .gitignore  .gitmodules  README.md  TODOS.md  build-gdextension.sh  default_bus_layout.tres  icon.svg.import  project.godot
addons/vrm/: mtoon_template.tres  vrm_extension.gd
assets/: Favorite.svg.import  VpupprDuck.png.import  VpupprDucksBG.png.import  VpupprLogo.png.import  VpupprSubLogo.png.import  icon.svg.import  main_theme.theme
assets/3d-models/: rubber-duck.glb.import  rubber-duck_duck_eyes.png.import  rubber-duck_duck_texture.png.import
gdextension/: SConstruct  vpuppr.gdextension  vpuppr_cpp.gdextension  vpuppr_rust.gdextension
gdextension/cpp/: SConstruct  vpuppr.gdextension.old
gdextension/doc_classes/: Logger.xml
gdextension/rust/: Cargo.toml
gdextension/rust/src/: lib.rs
gdextension/src/: register_types.cpp  register_types.h
gui/: gui_interface.gd  intro_splash.gd  intro_splash.tscn  mic_input.gd  mic_input.tscn  standard_gui.gd  standard_gui.tscn  tracking.gd  tracking.tscn
model/: datetime.gd  gui_menu.gd  metadata.gd  mic_input_config.gd  png_tuber.gd  png_tuber_config.gd  pngtuber.gd  pngtuber_data.gd  puppet_3d.gd  runner_data.gd
model/configs/: png_tuber_config.gd  png_tuber_face_state.gd  vrm_config.gd
screens/: main.gd  main.tscn  runner_context.gd  runner_handler.gd  runner_selection.gd  runner_selection.tscn  settings.gd  settings.tscn
screens/runner-selection/: loading_spinner.gd  loading_spinner.tscn  new_runner.gd  (+6 more)
script_templates/: structured.gd
utils/: app_manager.gd  mic_input_listener.gd  node_utils.gd
(+41 files in other folders)
